--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -19,12 +19,13 @@ input,button
 button,label,input[type='submit'],input[type='button']
 	cursor: pointer
 // -==[ Медиа ]==-
+@import "grid/grid"
 @import "media/m"
-+mq(440px)
++mq(460px)
 	@import "media/ml"
-+mq(740px)
++mq(768px)
 	@import "media/t"
-+mq(1000px)
++mq(1024px)
 	@import "media/tl"
-+mq(1170px)
++mq(1200px)
 	@import "media/d"
