--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -1,2 +1,17 @@
 header.head
 	.section
+		.bricks
+			.mwd1.head-burger
+				button.head-burger-button
+					span
+			.m4.twd2.head-logo
+				a(href='#').head-logo-link
+					+img('logotype.svg')
+			.t4.head-nav
+				nav.head-nav-list
+					a(href='#').head-nav-link About us
+					a(href='#').head-nav-link Our cases
+					a(href='#').head-nav-link Contacts
+			.mwd1.t2.head-phone
+				a(href='#').head-phone-link
+					include ../../img/phone.svg
