--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -13,24 +13,23 @@
 	///*--==[ Размеры экранов ]==--*/
 	--mobile-width: calc(100% - 20px)
 	--mobile-large-width: 460px
-	--tablet-width: 740px
-	--tablet-large-width: 1000px
-	--desktop-width: 1170px
+	--tablet-width: 765px
+	--tablet-large-width: 1001px
+	--desktop-width: 1168px
+	--desktop-large-width: 1920px
 	// --==[ Цвета ]==--
 	
 	
 	--green: #{getRgb(#00FF00)}
 	--black: #{getRgb(#000)}
 	--blue: #{getRgb(#0000FF)}
-	--gray: #{getRgb(#DDD)}
+	--blue-light: #{getRgb(#58B9FF)}
+	--gray: #{getRgb(#323232)}
 	--red: #{getRgb(#FF0000)}
+	--white: #{getRgb(#FFFFFF)}
 	// --==[ Шрифты ]==--
 	--fontsize-body: 14px
 	--freg: ''
-	// --==[ Отступы ]==--
-	--col: 70px
-	--gap: 30px
-
 
 
 // --==[ Ширины ]==--
@@ -39,11 +38,12 @@ $mobile-large: var(--mobile-large-width)
 $tablet: var(--tablet-width)
 $tablet-large: var(--tablet-large-width)
 $desktop: var(--desktop-width)
+$desktop-large: var(--desktop-large-width)
 
 ///*--==[ Отступы ]==--*/
 $col: var(--col)
 $gap: var(--gap)
-$f_reg: 'Replace on font name'
+$f_reg: var(--freg)
 // --==[Шрифты]==--
 //
 	$f_light: '1'
@@ -52,8 +52,10 @@ $f_reg: 'Replace on font name'
 	$f_bold:'4'
 
 // --==[ Цвета ]==--
-$black: var(--black)
-$blue: var(--blue)
-$gray: var(--gray)
-$green: var(--green)
-$red: var(--red)
+$black: color(var(--black))
+$blue: color(var(--blue))
+$blue-light: color(var(--blue-light))
+$gray: color(var(--gray))
+$green: color(var(--green))
+$red: color(var(--red))
+$white: color(var(--white))
