--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -4,7 +4,12 @@ append vars
 		page_title= 'Главная'
 block content
 	main
-		section.welcome
+		section.banner
 			.section
-				.bricks
-					h1 Hello
+				.twd7.banner-inner
+					h1.title.banner-title Invest in real estate
+					p.banner-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns
+					.banner-buttons
+						button.button.button-blue INVEST WITH US
+						button.button.button-transparent SELL MY PROPERTY
+		section.about
