--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -2,16 +2,18 @@ header.head
 	.section
 		.bricks
 			.mwd1.head-burger
-				button.head-burger-button
-					span
-			.m4.twd2.head-logo
+				button(data-click-action='front:burgerClick').head-burger-button
+					+img('headBurger.svg')
+					+img('close.svg')
+			.m4.t2.tl2.d2.head-logo
 				a(href='#').head-logo-link
 					+img('logotype.svg')
-			.t4.head-nav
+			.t5.tlwd6.dwd8.head-nav
 				nav.head-nav-list
 					a(href='#').head-nav-link About us
 					a(href='#').head-nav-link Our cases
 					a(href='#').head-nav-link Contacts
-			.mwd1.t2.head-phone
+			.m1.twd1.tl2.d2.head-phone
 				a(href='#').head-phone-link
 					include ../../img/phone.svg
+					span Request a call
