--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -11,26 +11,26 @@
 
 \:root
 	///*--==[ Размеры экранов ]==--*/
-	--mobile-width: calc(100% - 20px)
-	--mobile-large-width: 460px
-	--tablet-width: 765px
+	--mobile-width: 300px
+	--mobile-large-width: 320px
+	--tablet-width: 748px
 	--tablet-large-width: 1001px
 	--desktop-width: 1168px
 	--desktop-large-width: 1920px
+
 	// --==[ Цвета ]==--
-	
-	
 	--green: #{getRgb(#00FF00)}
 	--black: #{getRgb(#000)}
-	--blue: #{getRgb(#0000FF)}
+	--blue: #{getRgb(#58B9FF)}
 	--blue-light: #{getRgb(#58B9FF)}
 	--gray: #{getRgb(#323232)}
 	--red: #{getRgb(#FF0000)}
 	--white: #{getRgb(#FFFFFF)}
+
 	// --==[ Шрифты ]==--
 	--fontsize-body: 14px
-	--freg: ''
 
+	--transition: .35s ease
 
 // --==[ Ширины ]==--
 $mobile: var(--mobile-width)
@@ -43,7 +43,11 @@ $desktop-large: var(--desktop-large-width)
 ///*--==[ Отступы ]==--*/
 $col: var(--col)
 $gap: var(--gap)
-$f_reg: var(--freg)
+$mcyrl100: 'MuseoSansCyrl'
+$mcyrl300: 'MuseoSansCyrl_0'
+$mcyrl500: 'MuseoSansCyrl_1'
+$mcyrl700: 'MuseoSansCyrl_2'
+$mcyrl900: 'MuseoSansCyrl_3'
 // --==[Шрифты]==--
 //
 	$f_light: '1'
@@ -59,3 +63,5 @@ $gray: color(var(--gray))
 $green: color(var(--green))
 $red: color(var(--red))
 $white: color(var(--white))
+
+$transition: var(--transition)
