--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -24,7 +24,8 @@
 	--blue: #{getRgb(#58B9FF)}
 	--blue-light: #{getRgb(#58B9FF)}
 	--gray: #{getRgb(#323232)}
-	--red: #{getRgb(#FF0000)}
+	--gray-text: #{getRgb(#585858)}
+	--red: #{getRgb(#FF5858)}
 	--white: #{getRgb(#FFFFFF)}
 
 	// --==[ Шрифты ]==--
@@ -60,6 +61,7 @@ $black: color(var(--black))
 $blue: color(var(--blue))
 $blue-light: color(var(--blue-light))
 $gray: color(var(--gray))
+$gray-text: color(var(--gray-text))
 $green: color(var(--green))
 $red: color(var(--red))
 $white: color(var(--white))
