--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -11,15 +11,19 @@ $font_body: 14px
 .set,body
 	+wh(100%)
 body
-	+font($font_body,$mcyrl700,$black)
+	+font($font_body,$mcyrl700,$gray-text)
 	min-height: 100vh
 	overflow-x: hidden
 
-input,button
+input,button,textarea
+	cursor: pointer
 	font-family: inherit
 	font-size: inherit
 	background-color: transparent
 	border: none
+
+input,button,a
+	color: $gray-text
 button,label,input[type='submit'],input[type='button']
 	cursor: pointer
 // -==[ Медиа ]==-
