--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -1,3 +1,12 @@
 footer.foot
 	.section
+		.bricks
+			.m6.t3.tlwd5.foot-copy
+				.foot-copy-inner
+					span Copyright © 2018—2021&nbsp;
+					span VULCAN INVESTMENTS. All rights reserved.
+			.m6.twd5.tl5.foot-links
+				a(href='#').foot-link FaceBook
+				a(href='#').foot-link instagram
+				a(href='#').foot-link twitter
 	+inc('js','front.js',false)(type="module")
